* Namespace natives Fuse.Date, Fuse.Function, Fuse.List, Fuse.Number, Fuse.RegExp and Fuse.String. [jddalton]
  Note: Backwards compatibility warning.
   - Moved abstract.js, deprecated.js, try.js to the Prototype emulator folder
   - Moved Fuse.Browser object definition to broswer.js
   - Renamed Ajax.PeriodicalUpdater to Ajax.TimedUpdate
   - Cleaned-up private utility methods
   - Ensure consistent use of named functions
   - Implemented inheritable namespaces

   - Change Fuse.Class()
     * Removed Class.create() in favor of Fuse.Class(superclass/methods [, methods, ...])
     * Allow passing a `constructor` method to Fuse.Class to use as the klass()
     * Make the initialize() method optional and don't create it by default

   - Added methods:
     Fuse.addNS(path, superclass/methods [, methods, ...]): Add namespaces to the Fuse object
     Fuse.Fusebox(): Return an object containing sandboxed natives

* unit test: Add Form unit tests to ensure Fuse works with Safari's input type="search". [jddalton, malsup]
  Originally reported on http://dev.jquery.com/ticket/4107.

* Make Ajax.Request() use the window.location.href value if a falsey url is given. [Prototype LH #597] [jddalton, Spezi]

* Ensure IE String#replace converts null/undefined return values to string `null`/`undefined` and add more unit tests for String#replace, String#gsub, and String#sub. [jddalton, Michael Hollauf, Samuel Lebeau]

* Add Hash#toArray and properties _prairs, _keys, and _values to optimize methods iterating over the internal hash object. [jddalton]

* Add support for Mozilla's Object#__count__ property in Object.isEmpty(). [Andreas Ecker, jddalton, Nicholas Zakas]

* Optimize Number#times by forking for `thisArg` and cleanup Try.these() and ObjectRange#_each. [jddalton]

* Optimize Array#contains and Enumerable.contains() by forking for strict or loose matches. [jddalton]

* Give Object.inspect() the ability to process Object objects. [Prototype LH #638] [Evil.2000, jddalton]
